dev/ingress.yaml
# dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: playground.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground
            port:
              number: 8888
